Gray-Space/src/objects/GS_UserVisitedProduct__c.object
<CustomObject>
    <fields>
        <fullName>GS_Last_Visited_Date_Time__c</fullName>
        <label>Last Visited Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GS_ProductId__c</fullName>
        <label>ProductId</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_UserId__c</fullName>
        <label>UserId</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>UserVisitedProduct</label>
    <nameField>
        <displayFormat>UP-{000000000}</displayFormat>
        <label>UserVisit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UserVisitedProducts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>